# modern-python-projects

./: README.md
uptimer-cli/: pyproject.toml
uptimer-cli-package/: AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  requirements-dev.in  requirements-dev.txt  setup.cfg  setup.py  tox.ini
uptimer-cli-package/.github/: ISSUE_TEMPLATE.md
uptimer-cli-package/docs/: Makefile  api.rst  conf.py  index.rst  installation.rst  make.bat  usage.rst
uptimer-cli-package/tests/: __init__.py  test_uptimer_cli.py
uptimer-cli-package/uptimer_cli/: __init__.py  cli.py  helpers.py
uptimer-cli/source/: api.rst  conf.py  index.rst
uptimer-cli/tests/: test_uptimer.py
uptimer-cli/uptimer_cli/: uptimer.py
uptimer-gui/: setup.py
uptimer-gui/guptimer/: gui.py  helpers.py
uptimer-web/: Dockerfile  helpers.py  main.py  requirements.in  requirements.txt
uptimer-web/templates/: home.html
