[tool.poetry]
name = "uptimer-cli"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "uptimer_cli"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
requests = "^2.28.1"
colorama = "^0.4.5"
pytest-mock = "^3.8.2"
sphinx-click = "^4.3.0"


[tool.poetry.group.dev.dependencies]
black = {version = "^22.8.0", allow-prereleases = true}
pytest = "^7.1.3"
Sphinx = "^5.1.1"

[tool.poetry.scripts]
uptimer = "uptimer_cli.uptimer:check"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
